# rust-todo-app

./: Cargo.toml  todos.json
src/: colors.rs  main.rs  progress.rs  storage.rs  todo.rs
