[package]
name = "todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
indicatif = "0.17.11"
uuid = { version = "1.17.0", features = ["serde", "v4"] }